# ParGenes

./: .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  checker.sh  gitpull.sh  install.sh  install_debug.sh  install_scheduler_only.sh  uninstall.sh
examples/: raxml_options.txt  raxml_options_nomodel.txt  run_example.py  run_example_mpirun.py  run_example_split.py  run_mpi_scheduler_example.py  run_small_allinvalid.sh  run_small_bad_ali.sh  run_small_bootstraps.sh  run_small_bootstraps_astral-hybrid.sh  run_small_disable_sort.sh  run_small_filtered.sh  run_small_heuristic.sh  run_small_modeltest.sh  run_small_modeltest_cores.sh  run_small_multiple_starting_trees.sh  run_small_normal.sh  run_small_normal_astral.sh  run_small_onecore.sh  run_small_openmp.sh  run_small_partitionned_msas.sh  run_small_per_msa_modeltest_parameters.txt  run_small_per_msa_raxml_parameters.txt  run_small_valgrind.sh
examples/commands/: .command.txt.swp  command.txt  command_split.txt  commands.txt
examples/data/small/: msa_filter.txt  per_msa_partitions.txt
examples/data/small/fasta_files/: msa1.fasta  msa2.fasta  msa3.fasta  msa4.fasta  msa5.fasta  msa6.fasta  msa7.fasta  msa8.fasta  msa9.fasta
examples/data/small/invalid_fasta_files/: invalid_msa2.fasta
examples/data/small/partition_files/: msa2.part  msa3.part  msa4.part
examples/fasta_files/: HB011006.fasta  HBG011000.fasta  readme.txt
mpi-scheduler/: CMakeLists.txt  test_compilation.sh
mpi-scheduler/src/: CMakeLists.txt  Checkpoint.cpp  Checkpoint.hpp  Command.cpp  Command.hpp  Common.cpp  Common.hpp  ParallelImplementation.cpp  ParallelImplementation.hpp  SVGDrawer.cpp  SVGDrawer.hpp  main.cpp
mpi-scheduler/src/onecore_implem/: OneCoreImplem.cpp  OneCoreImplem.hpp
mpi-scheduler/src/openmp_implem/: OpenMPImpl.cpp  OpenMPImpl.hpp
mpi-scheduler/src/split_implem/: SplitImplem.cpp  SplitImplem.hpp
multi-raxml/: mr_arguments.py  mr_bootstraps.py  mr_checkpoint.py  mr_commons.py  mr_modeltest.py  mr_raxml.py  mr_scheduler.py  multi-raxml.py
pargenes/: arguments.py  astral.py  bootstraps.py  checkpoint.py  commons.py  export.py  logger.py  modeltest.py  pargenes-hpc-debug.py  pargenes-hpc.py  pargenes.py  pargenescore.py  raxml.py  report.py  scheduler.py  version.py
pargenes/pargenes_src/: arguments.py  aster.py  astral.py  bootstraps.py  commons.py  constraint.py  errorcodes.py  export.py  pargenescore.py  raxml.py  report.py  scheduler.py  version.py
scripts/: multiraxml_debug.py  multiraxml_fromfastadir.py  raxml_runner.py
src/: CMakeLists.txt  Checkpoint.cpp  Checkpoint.hpp  Command.cpp  Command.hpp  Common.cpp  Common.hpp  main.cpp  spawner.py  spawner.sh
src/mpirun_implem/: MpirunImplem.cpp  MpirunImplem.hpp
src/spawn_implem/: SpawnImplem.cpp  SpawnImplem.h  SpawnImplem.hpp
src/split_implem/: SplitImplem.cpp  SplitImplem.hpp
srcwrapper/: CMakeLists.txt  wrapper.cpp
tests/: run_tests.py  test_custom_raxml_library.sh
tests/smalldata/: msa_filter.txt  only_1_models.txt  per_msa_modeltest_parameters.txt  per_msa_raxml_parameters.txt  raxml_global_options.txt
tests/smalldata/fasta_files/: msa1.fasta  msa3.fasta  msa4.fasta  msa5.fasta
